--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Galileo Zoe</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Bienvenido, Soy Galileo Zoe, un Ingeniero en Desarrollo de Software Multiplataforma</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
